cloud/production/gke-ingress/ingress-resource.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    # GIGA WAZNE: statyczny adres ktory utworzylismy z gcloud compute dodajemy do konfiguracji ingress'a
    kubernetes.io/ingress.global-static-ip-name: my-static-ip #<- o tu
    cert-manager.io/issuer: letsencrypt-production
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - fruits.bobaklabs.com
  defaultBackend:
    service:
      name: fruit-app
      port:
        number: 80
  rules:
  - host: "fruits.bobaklabs.com"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: fruit-app
            port:
              number: 80
